Update the change log details

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
 v0.2.0:
-	data: 2014-04-10
+	data: 2014-04-25
 	changes:
-		- Support for writing JSON data into multiple files and pre/post fixing values, updated depedencies.
+		- Support for writing JSON data into multiple files and pre/post fixing values
+		- Updated dependencies
+		- Added unit tests
 v0.1.0:
   date: 2013-05-13
   changes:
